...
            statisticService.store(correct: correctAnswers, total: questionsAmount)
            let text = statisticService.getResultStatisticMessage(correct: correctAnswers, total: questionsAmount)
            let viewModel = QuizResultsViewModel(
                title: "Этот раунд окончен!",
                text: text,
                buttonText: "Сыграть ещё раз",
                accessibilityId: "Game results"
            )
            // показать результат квиза
            viewController?.show(quiz: viewModel)
        } else {
            switchToNextQuestion()
            questionFactory?.requestNextQuestion()
...
